<resources>
    <string name="app_name">womensafetyApplication</string>
    <string name="your_location">Your Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="get_location">Get Location</string>
</resources>