<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowLocation"
    android:layout_margin="14dp">

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_location"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
       app:layout_constraintTop_toBottomOf="@id/latitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
        app:layout_constraintTop_toBottomOf="@id/longitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="14dp"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        android:layout_marginTop="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country"/>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab1"
        android:src="@drawable/person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab2"
        android:layout_margin="24dp"/>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab2"
        android:src="@drawable/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>